--- a/scss/_style_small.scss
+++ b/scss/_style_small.scss
@@ -47,6 +47,15 @@ body {
     			margin-top: 0rem;
     		}
 
+            ol {
+                margin-left: 2rem;
+                margin-top: 1rem;
+
+                li {
+                    margin-bottom: 1rem;
+                }
+            }
+
     		ul {
     			margin-left: 2rem;
     			margin-top: 1rem;
